--- a/SistemaReservaHotel/src/Presentacion/frmhabitacion.form
+++ b/SistemaReservaHotel/src/Presentacion/frmhabitacion.form
@@ -370,6 +370,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Cancelar"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnCancelarActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
@@ -413,7 +416,7 @@
               </Group>
               <Group type="102" alignment="1" attributes="0">
                   <EmptySpace max="32767" attributes="0"/>
-                  <Component id="lblTotalRegistros" min="-2" pref="74" max="-2" attributes="0"/>
+                  <Component id="lblTotalRegistros" min="-2" pref="108" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="101" max="-2" attributes="0"/>
               </Group>
           </Group>
