--- a/SistemaReservaHotel/src/Presentacion/frmhabitacion.form
+++ b/SistemaReservaHotel/src/Presentacion/frmhabitacion.form
@@ -416,8 +416,8 @@
               </Group>
               <Group type="102" alignment="1" attributes="0">
                   <EmptySpace max="32767" attributes="0"/>
-                  <Component id="lblTotalRegistros" min="-2" pref="108" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="101" max="-2" attributes="0"/>
+                  <Component id="lblTotalRegistros" min="-2" pref="199" max="-2" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
